<?xml version="1.0"?>
<package>
  <name>kb_mover</name>
  <version>0.0.0</version>
  <description>The kb_mover package</description>

  <maintainer email="mateus.sureis@gmail.com">Mateus</maintainer>


  <license>?</license>

  <build_depend>keyboard_reader</build_depend>
  <run_depend>keyboard_reader</run_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz_plugin_osvr</run_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
